# school-calendar

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: calendar.rs  edulink.rs  lib.rs  main.rs  models.rs  parser.rs
src/edulink/: base.rs  homework.rs  mod.rs  timetable.rs
tests/: test.rs
