[package]
name = "school-calander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = { version = "0.11.22", features = ["json"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }

