[package]
name = "school-calander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.191"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }

